--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -2,6 +2,8 @@
 // Import a Google Font
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
 
+$font-stack:    Helvetica, sans-serif;
+
 // // Set your brand colors
 // $purple: blue;
 // $pink: #FA7C91;
@@ -10,7 +12,7 @@
 // $beige-lighter: #EFF0EB;
 
 // // Update Bulma's global variables
-// $family-sans-serif: "Nunito", sans-serif;
+$family-sans-serif: "Nunito", sans-serif;
 // $grey-dark: $brown;
 // $grey-light: $beige-light;
 // $primary: $purple;
